--- a/1.Preinstallation.md
+++ b/1.Preinstallation.md
@@ -1,3 +1,27 @@
+# Kubernetes Architecture and Components
+
+Kubernetes is a container orchestration platform with a master-worker architecture.
+
+## Architecture Overview
+
+Control Plane:
+- **API Server**: Frontend API for Kubernetes.
+- **Scheduler**: Assigns pods to nodes.
+- **etcd**: Distributed key-value store.
+- **Controller Manager**: Runs controller processes.
+
+Worker Nodes:
+- **Kubelet**: Agent that runs on nodes, manages pods/containers.
+- **Kube-Proxy**: Network proxy maintaining network rules.
+- **Container Runtime**: Runs containers (containerd, CRI-O, Docker).
+
+## Summary
+
+- The **Control Plane** manages the cluster state and scheduling.
+- The **Worker Nodes** run the actual containerized applications.
+
+
+
 ## Minimum System Requirements per Kubernetes Node
 | Component        | Minimum (Small cluster/test)                          | Recommended (Production)               |
 | ---------------- | ----------------------------------------------------- | -------------------------------------- |
