--- a/1.Preinstallation.md
+++ b/1.Preinstallation.md
@@ -134,3 +134,11 @@ Load br_netfilter module
 ```
 modprobe br_netfilter
 ```
+```
+echo 1 > /proc/sys/net/ipv4/ip_forward
+```
+Make it persistent:
+```
+echo "net.ipv4.ip_forward=1" >> /etc/sysctl.conf
+sysctl -p
+```
