--- a/2.installation.md
+++ b/2.installation.md
@@ -1,5 +1,5 @@
 
-### Install kubelet,kubeadm,kubectl
+#### Install kubelet,kubeadm,kubectl
 Add Kubernetes Repository & Update
 ```
 apt update
@@ -12,7 +12,7 @@ apt install -y apt-transport-https ca-certificates curl
 curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.29/deb/Release.key\
 | sudo gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
 ```
-## Add Kubernetes APT repository
+#### Add Kubernetes APT repository
 ```
 echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.29/deb/ /'\
 | sudo tee /etc/apt/sources.list.d/kubernetes.list
@@ -20,7 +20,7 @@ echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.
 ```
 apt update
 ```
-## Install Kubernetes Components
+#### Install Kubernetes Components
 To install a stable version of kubectl, kubeadm, and kubelet, you should select a version that:
 
 Is not the very latest, as those may still have bugs
@@ -39,11 +39,11 @@ then ;
 sudo apt install -y kubelet=1.29.13-1.1 kubeadm=1.29.13-1.1 kubectl=1.29.13-1.1
 ```
 
-## Prevent Auto-Upgrades
+#### Prevent Auto-Upgrades
 ```
 apt-mark hold kubelet kubeadm kubectl
 ```
-## Verify Installation
+#### Verify Installation
 ```
 kubectl version --client --output=yaml
 ```
