--- a/1.Preinstallation.md
+++ b/1.Preinstallation.md
@@ -1,4 +1,4 @@
-## Minimum System Requirements per Kubernetes Node
+### Minimum System Requirements per Kubernetes Node
 | Component        | Minimum (Small cluster/test)                          | Recommended (Production)               |
 | ---------------- | ----------------------------------------------------- | -------------------------------------- |
 | **CPU**          | 1 CPU core                                            | 2+ CPU cores                           |
@@ -8,7 +8,7 @@
 | **OS**           | Linux (Ubuntu 20.04+, CentOS 7+, Debian 10+, RHEL 7+) | Same + kernel optimized for containers |
 | **Swap**         | Disabled (must disable swap)                          | Disabled (must disable swap)           |
 
-## Software Requirements
+### Software Requirements
 
 OS: Linux distributions (Ubuntu, CentOS, Debian, RHEL)
 
@@ -20,7 +20,7 @@ Disable swap: swapoff -a and remove or comment swap entries from /etc/fstab
 
 Firewall: Open required ports (e.g., 6443 for API server, 10250 for kubelet, 2379-2380 for etcd)
 
-## Pre-installation Requirements
+### Pre-installation Requirements
 
 Set hostname
 
@@ -58,7 +58,7 @@ sudo apt update && sudo apt upgrade -y
 Set Static DNS
 Use DNS 78.157.42.100 (Electro).
 
-## Install containerd (Kubernetes Container Runtime)
+#### Install containerd (Kubernetes Container Runtime)
 Step 1: Install containerd
 ```
 cd /usr/local/
@@ -108,7 +108,7 @@ sudo systemctl daemon-reload
 ```
 systemctl restart containerd
 ```
-## Install CNI Plugins (Container Network Interface)
+#### Install CNI Plugins (Container Network Interface)
 ```
 wget https://github.com/containernetworking/plugins/releases/download/v1.4.0/cni-plugins-linux-amd64-v1.4.0.tgz
 ```
@@ -118,7 +118,7 @@ mkdir -p /opt/cni/bin
 ```
 tar -xzvf cni-plugins-linux-amd64-v1.4.0.tgz -C /opt/cni/bin
 ```
-## enable Cgroup Driver
+#### enable Cgroup Driver
 ```
 vi /etc/containerd/config.toml
 [plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runc]
@@ -129,7 +129,7 @@ SystemdCgroup = true
 ```
 systemctl restart containerd
 ```
-## Forwarding IPV4 and letting iptables see traffic
+#### Forwarding IPV4 and letting iptables see traffic
 Load br_netfilter module
 ```
 modprobe br_netfilter
