Update 3.Manager Node Configuration.md

--- a/3.Manager Node Configuration.md
+++ b/3.Manager Node Configuration.md
@@ -1,1 +1,45 @@
+ #### kubeadm init Options – CLI vs Config File
+ | Option                       | CLI Flag                        | Config File Path (YAML)                                        | Example Value    |
+| ---------------------------- | ------------------------------- | -------------------------------------------------------------- | ---------------- |
+| API Server Advertise Address | `--apiserver-advertise-address` | Not in YAML directly — set by the node’s network configuration | `45.158.169.121` |
+| Kubernetes Version           | `--kubernetes-version`          | `ClusterConfiguration.kubernetesVersion`                       | `v1.29.13`       |
+| Pod Network CIDR             | `--pod-network-cidr`            | `ClusterConfiguration.networking.podSubnet`                    | `10.10.0.0/16`   |
+
+✅ Notes:
+
+--apiserver-advertise-address: should be the manager node’s IP address.
+
+--pod-network-cidr: internal network range for pods (used by the CNI plugin).
+
+--ignore-preflight-errors=NumCPU,Mem: skips low CPU/RAM errors (helpful in test/lab environments).
+
+--v=5: sets verbosity to level 5 (for debug output).
+
+```
+kubeadm init \
+  --kubernetes-version=v1.29.13 \
+  --pod-network-cidr=10.10.0.0/16 \
+  --apiserver-advertise-address=45.158.169.121 \
+  --ignore-preflight-errors=NumCPU,Mem \
+  --v=5
+```
+After Your Kubernetes control-plane has initialized successfully!
+
+To start using your cluster, you need to run the following as a regular user:
+```
+  mkdir -p $HOME/.kube;
+  sudo cp -i /etc/kubernetes/admin.conf $HOME/.kube/config;
+  sudo chown $(id -u):$(id -g) $HOME/.kube/config;
+```
+```
+export KUBECONFIG=/etc/kubernetes/admin.conf
+```
+```
+kubectl get node
+```
+see this output :
+NAME   STATUS     ROLES           AGE     VERSION
+mnf    NotReady   control-plane   8m23s   v1.29.13
+
+
 
