Update 4.Worker Node Conf.md

--- a/4.Worker Node Conf.md
+++ b/4.Worker Node Conf.md
@@ -23,9 +23,9 @@ kubectl get nodes
 and see :
 
 | NAME |  STATUS  |   ROLES     |      AGE   VERSION |
-| .... | ........ | ........... | ................. |
-mnf  | NotReady | control-plane  | 58m   v1.29.13
-wnf  |  NotReady  | <none>        |  57s   v1.29.13
+| ---- | -------- | ----------- | ------------------ |
+| mnf  | NotReady | control-plane  | 58m   v1.29.13 |
+| wnf  |  NotReady  | <none>        |  57s   v1.29.13 |
 
 
   
