Update and rename 3.Manager Node Conf.md to 3.After installation.md

--- a/3.After installation.md
+++ b/3.After installation.md
@@ -1,3 +1,6 @@
+## Manager Node Configuration (Mnf)
+---------------------------------
+
  #### kubeadm init Options – CLI vs Config File
  | Option                       | CLI Flag                        | Config File Path (YAML)                                        | Example Value    |
 | ---------------------------- | ------------------------------- | -------------------------------------------------------------- | ---------------- |
@@ -38,8 +41,50 @@ export KUBECONFIG=/etc/kubernetes/admin.conf
 kubectl get node
 ```
 see this output :
-NAME   STATUS     ROLES           AGE     VERSION
-mnf    NotReady   control-plane   8m23s   v1.29.13
+
+NAME&nbsp;&nbsp;&nbsp;&nbsp;STATUS&nbsp;&nbsp;&nbsp;&nbsp;ROLES&nbsp;&nbsp;&nbsp;&nbsp;AGE&nbsp;&nbsp;&nbsp;&nbsp;VERSION
+
+mnf&nbsp;&nbsp;&nbsp;&nbsp;NotReady&nbsp;&nbsp;&nbsp;&nbsp;control-plane&nbsp;&nbsp;&nbsp;&nbsp;8m23s&nbsp;&nbsp;&nbsp;&nbsp;v1.29.13
+
+-----------------------------------
+## Worker Node Configuration (Wnf) :
+
+✅ 1. Get the Worker Join Command
+
+Right after running kubeadm init in Mnf, it usually prints a kubeadm join command like this:
+```
+kubeadm join <CONTROL_PLANE_IP>:6443 --token <token> --discovery-token-ca-cert-hash sha256:<hash>
+```
+If you didn’t save it, no problem — you can regenerate it:
+
+🔁 Re-generate the join command in Manager Node :
+```
+kubeadm token create --print-join-command
+```
+Example output:
+
+kubeadm join 45.158.169.121:6443 --token abcdef.0123456789abcdef \
+  --discovery-token-ca-cert-hash sha256:0123456789abcdef...1234
+
+and use this for join worker node to cluster
+for verify in Mnf :
+```
+kubectl get nodes
+```
+and see :
+
+NAME&nbsp;&nbsp;&nbsp;&nbsp;STATUS&nbsp;&nbsp;&nbsp;&nbsp;ROLES&nbsp;&nbsp;&nbsp;&nbsp;AGE&nbsp;&nbsp;&nbsp;&nbsp;VERSION
+
+mnf&nbsp;&nbsp;&nbsp;&nbsp;NotReady&nbsp;&nbsp;&nbsp;&nbsp;control-plane&nbsp;&nbsp;&nbsp;&nbsp;58m&nbsp;&nbsp;&nbsp;&nbsp;v1.29.13
+
+wnf&nbsp;&nbsp;&nbsp;&nbsp;NotReady&nbsp;&nbsp;&nbsp;&nbsp;<none>&nbsp;&nbsp;&nbsp;&nbsp;57s&nbsp;&nbsp;&nbsp;&nbsp;v1.29.13
+
+
+
+  
+
+
+
 
 
 
