--- a/1.Preinstallation.md
+++ b/1.Preinstallation.md
@@ -51,6 +51,26 @@ disable and stop ufw
 ```
 service ufw stop && service ufw disable 
 ```
+or Configure UFW
+
+✅ Manager (Control Plane) Node
+```
+sudo ufw allow 6443/tcp    # Kubernetes API server
+sudo ufw allow 2379:2380/tcp  # etcd server client API
+sudo ufw allow 10250/tcp   # Kubelet API
+sudo ufw allow 10259/tcp   # kube-scheduler
+sudo ufw allow 10257/tcp   # kube-controller-manager
+sudo ufw allow from <worker-node-ip>/32 to any port 10250 proto tcp  # Allow workers to connect to kubelet
+```
+✅ Worker Node
+```
+sudo ufw allow 10250/tcp   # Kubelet API
+sudo ufw allow 30000:32767/tcp  # NodePort range for services
+sudo ufw allow 10255/tcp   # Read-only kubelet API (optional; often disabled)
+sudo ufw allow 6783/tcp    # Optional: Weave/Flannel CNI (if using)
+sudo ufw allow from <manager-node-ip>/32 to any port 10250 proto tcp  # Manager access to kubelet
+```
+
 Update System
 ```
 sudo apt update && sudo apt upgrade -y
