--- a/1.Preinstallation.md
+++ b/1.Preinstallation.md
@@ -22,11 +22,24 @@ Firewall: Open required ports (e.g., 6443 for API server, 10250 for kubelet, 237
 
 ### Pre-installation Requirements
 
-Set hostname
+🖥️ Set Hostname
+Set unique and descriptive hostnames for each node to simplify cluster management.
+📌 Recommended Hostnames:
+| Node Role               | Hostname |
+| ----------------------- | -------- |
+| Manager (Control Plane) | `mnf`    |
+| Worker                  | `wnf`    |
 
-manager node --> mnf
-
-worker node --> wnf
+✅ Apply Hostname
+```
+hostnamectl set-hostname Mnf
+hostnamectl set-hostname Wnf
+```
+Then verify ;
+```
+bash -l;
+hostnamectl
+```
 
 Ensure Unique MAC Address & UUID 
 ```
@@ -75,8 +88,19 @@ Update System
 ```
 sudo apt update && sudo apt upgrade -y
 ```
-Set Static DNS
-Use DNS 78.157.42.100 (Electro).
+🔧 Set Static DNS
+To ensure consistent name resolution, configure your system to use a static DNS server
+📌 Recommended DNS: electro,openDNS,shecan,....
+for set permanently :
+```
+rm -rf /etc/resolv.conf
+```
+then;
+```
+vi /etc/resolv.conf
+```
+add this :
+nameserver  78.157.42.100 #(Electro)
 
 #### Install containerd (Kubernetes Container Runtime)
 Step 1: Install containerd
