--- a/1.Preinstallation.md
+++ b/1.Preinstallation.md
@@ -105,9 +105,7 @@ nameserver  78.157.42.100 #(Electro)
 #### Install containerd (Kubernetes Container Runtime)
 Step 1: Install containerd
 ```
-cd /usr/local/
-```
-```
+cd /usr/local/;\
 wget https://github.com/containerd/containerd/releases/download/v1.6.30/containerd-1.6.30-linux-amd64.tar.gz
 ```
 ```
@@ -118,12 +116,8 @@ Step 2: Setup systemd service for containerd
 wget https://raw.githubusercontent.com/containerd/containerd/main/containerd.service
 ```
 ```
-mv containerd.service /usr/lib/systemd/system/
-```
-```
-systemctl daemon-reload
-```
-```
+mv containerd.service /usr/lib/systemd/system/;\
+systemctl daemon-reload;\
 systemctl enable --now containerd.service
 ```
 Step 3: Install runc (for namespaces & cgroups)
@@ -131,25 +125,15 @@ Step 3: Install runc (for namespaces & cgroups)
 wget https://github.com/opencontainers/runc/releases/download/v1.1.12/runc.amd64
 ```
 ```
-install -m 755 runc.amd64 /usr/local/sbin/runc
-```
-```
+install -m 755 runc.amd64 /usr/local/sbin/runc;\
 runc --version
 ```
 Step 4: Configure containerd
 ```
-mkdir -p /etc/containerd
-```
-```
-cd /etc/containerd
-```
-```
-containerd config default | sudo tee /etc/containerd/config.toml
-```
-```
-sudo systemctl daemon-reload
-```
-```
+mkdir -p /etc/containerd;\
+cd /etc/containerd;\
+containerd config default | sudo tee /etc/containerd/config.toml;\
+systemctl daemon-reload;\
 systemctl restart containerd
 ```
 #### Install CNI Plugins (Container Network Interface)
@@ -157,9 +141,7 @@ systemctl restart containerd
 wget https://github.com/containernetworking/plugins/releases/download/v1.4.0/cni-plugins-linux-amd64-v1.4.0.tgz
 ```
 ```
-mkdir -p /opt/cni/bin
-```
-```
+mkdir -p /opt/cni/bin;\
 tar -xzvf cni-plugins-linux-amd64-v1.4.0.tgz -C /opt/cni/bin
 ```
 #### enable Cgroup Driver
@@ -176,13 +158,11 @@ systemctl restart containerd
 #### Forwarding IPV4 and letting iptables see traffic
 Load br_netfilter module
 ```
-modprobe br_netfilter
-```
-```
+modprobe br_netfilter;\
 echo 1 > /proc/sys/net/ipv4/ip_forward
 ```
 Make it persistent:
 ```
-echo "net.ipv4.ip_forward=1" >> /etc/sysctl.conf
+echo "net.ipv4.ip_forward=1" >> /etc/sysctl.conf;
 sysctl -p
 ```
