--- a/3.After installation.md
+++ b/3.After installation.md
@@ -72,42 +72,28 @@ for verify in Mnf :
 kubectl get nodes
 ```
 and see :
-
-NAME&nbsp;&nbsp;&nbsp;&nbsp;STATUS&nbsp;&nbsp;&nbsp;&nbsp;ROLES&nbsp;&nbsp;&nbsp;&nbsp;AGE&nbsp;&nbsp;&nbsp;&nbsp;VERSION
-
-mnf&nbsp;&nbsp;&nbsp;&nbsp;NotReady&nbsp;&nbsp;&nbsp;&nbsp;control-plane&nbsp;&nbsp;&nbsp;&nbsp;58m&nbsp;&nbsp;&nbsp;&nbsp;v1.29.13
-
-wnf&nbsp;&nbsp;&nbsp;&nbsp;NotReady&nbsp;&nbsp;&nbsp;&nbsp;<none>&nbsp;&nbsp;&nbsp;&nbsp;57s&nbsp;&nbsp;&nbsp;&nbsp;v1.29.13
-
+```
+NAME   STATUS     ROLES           AGE   VERSION
+mnf    NotReady   control-plane   58m   v1.29.13
+wnf    NotReady   <none>          57s   v1.29.13
+```
 Then for see Pods Status ;
 ```
 get pod -n kube-system  # -n (--namespace)
 ```
 output is ;
 
-NAME&nbsp;&nbsp;&nbsp;&nbsp;READY&nbsp;&nbsp;&nbsp;&nbsp;STATUS&nbsp;&nbsp;&nbsp;&nbsp;RESTARTS&nbsp;&nbsp;&nbsp;&nbsp;AGE
-
-coredns-76f75df574-g8wwj&nbsp;&nbsp;&nbsp;&nbsp;0/1&nbsp;&nbsp;&nbsp;&nbsp;Pending&nbsp;&nbsp;&nbsp;&nbsp;0&nbsp;&nbsp;&nbsp;&nbsp;145m
-
-coredns-76f75df574-t9jtf&nbsp;&nbsp;&nbsp;&nbsp;0/1&nbsp;&nbsp;&nbsp;&nbsp;Pending&nbsp;&nbsp;&nbsp;&nbsp;0&nbsp;&nbsp;&nbsp;&nbsp;145m
-
-etcd-mnf&nbsp;&nbsp;&nbsp;&nbsp;1/1&nbsp;&nbsp;&nbsp;&nbsp;Running&nbsp;&nbsp;&nbsp;&nbsp;0&nbsp;&nbsp;&nbsp;&nbsp;145m
-
-kube-apiserver-mnf&nbsp;&nbsp;&nbsp;&nbsp;1/1&nbsp;&nbsp;&nbsp;&nbsp;Running&nbsp;&nbsp;&nbsp;&nbsp;0&nbsp;&nbsp;&nbsp;&nbsp;145m
-
-kube-controller-manager-mnf&nbsp;&nbsp;&nbsp;&nbsp;1/1&nbsp;&nbsp;&nbsp;&nbsp;Running&nbsp;&nbsp;&nbsp;&nbsp;0&nbsp;&nbsp;&nbsp;&nbsp;145m
-
-kube-proxy-25m7s&nbsp;&nbsp;&nbsp;&nbsp;1/1&nbsp;&nbsp;&nbsp;&nbsp;Running&nbsp;&nbsp;&nbsp;&nbsp;0&nbsp;&nbsp;&nbsp;&nbsp;88m
-
-kube-proxy-6mps4&nbsp;&nbsp;&nbsp;&nbsp;1/1&nbsp;&nbsp;&nbsp;&nbsp;Running&nbsp;&nbsp;&nbsp;&nbsp;0&nbsp;&nbsp;&nbsp;&nbsp;145m
-
-kube-scheduler-mnf&nbsp;&nbsp;&nbsp;&nbsp;1/1&nbsp;&nbsp;&nbsp;&nbsp;Running&nbsp;&nbsp;&nbsp;&nbsp;0&nbsp;&nbsp;&nbsp;&nbsp;145m
-
-
-
-
-
-  
+```
+NAME                          READY   STATUS    RESTARTS   AGE
+coredns-76f75df574-g8wwj      0/1     Pending   0          145m
+coredns-76f75df574-t9jtf      0/1     Pending   0          145m
+etcd-mnf                      1/1     Running   0          145m
+kube-apiserver-mnf            1/1     Running   0          145m
+kube-controller-manager-mnf   1/1     Running   0          145m
+kube-proxy-25m7s              1/1     Running   0          88m
+kube-proxy-6mps4              1/1     Running   0          145m
+kube-scheduler-mnf            1/1     Running   0          145m
+```
 
 
 
