--- a/3.After installation.md
+++ b/3.After installation.md
@@ -41,10 +41,12 @@ export KUBECONFIG=/etc/kubernetes/admin.conf
 kubectl get node
 ```
 see this output :
-
-NAME&nbsp;&nbsp;&nbsp;&nbsp;STATUS&nbsp;&nbsp;&nbsp;&nbsp;ROLES&nbsp;&nbsp;&nbsp;&nbsp;AGE&nbsp;&nbsp;&nbsp;&nbsp;VERSION
-
-mnf&nbsp;&nbsp;&nbsp;&nbsp;NotReady&nbsp;&nbsp;&nbsp;&nbsp;control-plane&nbsp;&nbsp;&nbsp;&nbsp;8m23s&nbsp;&nbsp;&nbsp;&nbsp;v1.29.13
+```
+kubectl get nodes
+NAME   STATUS     ROLES           AGE   VERSION
+mnf    NotReady   control-plane   58m   v1.29.13
+wnf    NotReady   <none>          57s   v1.29.13
+```
 
 -----------------------------------
 ## Worker Node Configuration (Wnf) :
