--- a/3.After installation.md
+++ b/3.After installation.md
@@ -81,7 +81,7 @@ wnf    NotReady   <none>          57s   v1.29.13
 ```
 Then for see Pods Status ;
 ```
-get pod -n kube-system  # -n (--namespace)
+get pod -n kube-system  #-n or--namespace
 ```
 output is ;
 
