--- a/1.Pre installation.md
+++ b/1.Pre installation.md
@@ -43,6 +43,10 @@ Then verify ;
 bash -l;
 hostnamectl
 ```
+✅ Set TimeZone
+```
+timedatectl set-timezone Asia/Tehran;timedatectl
+```
 
 Ensure Unique MAC Address & UUID 
 ```
