--- a/1.Pre installation.md
+++ b/1.Pre installation.md
@@ -33,7 +33,7 @@ Set unique and descriptive hostnames for each node to simplify cluster managemen
 | Manager (Control Plane) | `mnf`    |
 | Worker                  | `wnf`    |
 
-✅ Apply Hostname
+ Apply Hostname
 ```
 hostnamectl set-hostname Mnf
 hostnamectl set-hostname Wnf
@@ -43,17 +43,17 @@ Then verify ;
 bash -l;
 hostnamectl
 ```
-✅ Set TimeZone
+🔧 Set TimeZone
 ```
 timedatectl set-timezone Asia/Tehran;timedatectl
 ```
 
-Ensure Unique MAC Address & UUID 
+🔧 Ensure Unique MAC Address & UUID 
 ```
 ip link            # Check MAC address
 cat /sys/class/dmi/id/product_uuid    # Check UUID
 ```
-Disable swap
+🔧 Disable swap
 Kubernetes requires swap to be disabled.
 ```
 sudo sed -i.bak '/ swap / s/^/#/' /etc/fstab
@@ -67,11 +67,11 @@ Verify Swap is Disabled
 ```
 free -m
 ```
-disable and stop ufw
+🔧 disable and stop ufw
 ```
 service ufw stop && service ufw disable 
 ```
-or Configure UFW
+🔧 or Configure UFW
 
 ✅ Manager (Control Plane) Node
 ```
