--- a/1.Pre installation.md
+++ b/1.Pre installation.md
@@ -103,15 +103,7 @@ To ensure consistent name resolution, configure your system to use a static DNS 
 
 for set permanently :
 ```
-rm -rf /etc/resolv.conf
-```
-then;
-```
-vi /etc/resolv.conf
-```
-add this :
-```
-nameserver  78.157.42.100 #(Electro)
+rm -rf /etc/resolv.conf;echo "nameserver 78.157.42.100  # (Electro)" | sudo tee -a /etc/resolv.conf
 ```
 
 #### Install containerd (Kubernetes Container Runtime)
