--- a/3.Post installation.md
+++ b/3.Post installation.md
@@ -69,11 +69,11 @@ kubeadm join 45.158.169.121:6443 --token abcdef.0123456789abcdef \
   --discovery-token-ca-cert-hash sha256:0123456789abcdef...1234
 
 and use this for join worker node to cluster
-for verify in Mnf :
+🔍 for verify in Mnf :
 ```
 kubectl get nodes
 ```
-and see :
+Example Output;
 ```
 NAME   STATUS     ROLES           AGE   VERSION
 mnf    NotReady   control-plane   58m   v1.29.13
@@ -83,7 +83,7 @@ Then for see Pods Status ;
 ```
 get pod -n kube-system  #-n or--namespace
 ```
-output is ;
+Example output;
 
 ```
 NAME                          READY   STATUS    RESTARTS   AGE
@@ -96,7 +96,18 @@ kube-proxy-25m7s              1/1     Running   0          88m
 kube-proxy-6mps4              1/1     Running   0          145m
 kube-scheduler-mnf            1/1     Running   0          145m
 ```
+🔍 Verify Cluster Info
 
+After setting up your Kubernetes cluster, you can verify its status using:
+```
+kubectl cluster-info
+```
+Example Output:
+```
+Kubernetes control plane is running at https://192.168.0.100:6443
+CoreDNS is running at https://192.168.0.100:6443/api/v1/namespaces/kube-system/services/kube-dns:dns/proxy
+```
+This confirms that your control plane and DNS services are up and reachable
 
 
 
