--- a/3.Post installation.md
+++ b/3.Post installation.md
@@ -37,10 +37,11 @@ To start using your cluster, you need to run the following as a regular user:
 ```
 export KUBECONFIG=/etc/kubernetes/admin.conf
 ```
+
 ```
 kubectl get node
 ```
-see this output :
+Example output :
 ```
 kubectl get nodes
 NAME   STATUS     ROLES           AGE   VERSION
@@ -64,12 +65,14 @@ If you didn’t save it, no problem — you can regenerate it:
 kubeadm token create --print-join-command
 ```
 Example output:
-
+```
 kubeadm join 192.168.0.100:6443 --token abcdef.0123456789abcdef \
   --discovery-token-ca-cert-hash sha256:0123456789abcdef...1234
-
+```
 and use this for join worker node to cluster
+
 🔍 for verify in Mnf :
+
 ```
 kubectl get nodes
 ```
