--- a/2.Installation.md
+++ b/2.Installation.md
@@ -50,5 +50,30 @@ kubectl version --client --output=yaml
 ```
 kubeadm version
 ```
+#### kubectl command auto-completion
+
+To enable kubectl command auto-completion and make it persistent by adding it to your .bashrc, use the following commands:
+```
+# Enable bash completion (install if not already installed)
+sudo apt install -y bash-completion
+
+# Enable kubectl autocomplete for the current shell
+source <(kubectl completion bash)
+
+# Add kubectl autocomplete permanently to .bashrc
+echo 'source <(kubectl completion bash)' >> ~/.bashrc
+
+# Optionally, add alias and enable completion for it
+echo 'alias k=kubectl' >> ~/.bashrc
+echo 'complete -F __start_kubectl k' >> ~/.bashrc
+
+# Reload .bashrc
+source ~/.bashrc
+```
+✅ After running this:
+
+Typing kubectl ge[TAB] will auto-complete to kubectl get.
+
+Using `k get po -n kube-system` will also work if you use the alias.
 
 
