--- a/3.Post installation.md
+++ b/3.Post installation.md
@@ -48,8 +48,26 @@ NAME   STATUS     ROLES           AGE   VERSION
 mnf    NotReady   control-plane   58m   v1.29.13
 wnf    NotReady   <none>          57s   v1.29.13
 ```
+Label Node wnf as worker1 in Mnager Node :
+
+Helps identify or select the node in deployments, node selectors, and dashboards
+
+```
+kubectl label node wnf node-role.kubernetes.io/worker=worker1
+```
+then:
+```
+kubectl get nodes
+```
+Will output:
+```
+NAME   STATUS   ROLES           AGE   VERSION
+mnf    Ready    control-plane   20m   v1.29.3
+wnf    Ready    worker1          18m   v1.29.3
+```
 
 -----------------------------------
+
 ## Worker Node Configuration (Wnf) :
 
 ✅ 1. Get the Worker Join Command
