--- a/5.nerdctl.md
+++ b/5.nerdctl.md
@@ -4,61 +4,42 @@ It’s commonly used when working with:
 k3s clusters
 Minimal, secure environments where Docker is not installed
 `containerd` as the runtime
+
+#### ✅ Installation
+```
+# Go to /usr/local/bin or another directory in your $PATH
+cd /usr/local/bin
+
+# Download the latest nerdctl release (adjust version if needed)
+wget https://github.com/containerd/nerdctl/releases/download/v1.7.5/nerdctl-full-1.7.5-linux-amd64.tar.gz
+
+# Extract the archive
+tar zxvf nerdctl-full-1.7.5-linux-amd64.tar.gz
+
+# Move nerdctl to /usr/local/bin if not already there
+cp nerdctl /usr/local/bin/
+
+# Optional: verify
+nerdctl --version
+```
+
 #### Basic and Important nerdctl Commands
-Show running containers
-```
-nerdctl ps
-```
-Show all containers (including stopped)
-```
-nerdctl ps -a
-```
-Run a container
-```
-nerdctl run -it --name test-container alpine sh
-```
-`-it`: interactive terminal
 
-`--name`: name your container
+-n k8s.io option in nerdctl refers to the containerd namespace that Kubernetes uses to manage its containers.
 
-`alpine`: lightweight image
+List all Kubernetes containers:
+```
+nerdctl -n k8s.io ps -a
+```
+Exec into a running Kubernetes container:
+```
+nerdctl -n k8s.io exec -it <container-id> sh
+```
+View images used by Kubernetes:
+```
+nerdctl -n k8s.io images
+```
 
-`sh`: start a shell
-
-Pull an image
-```
-nerdctl pull nginx
-```
-Stop a container
-```
-nerdctl stop test-container
-```
-Remove a container
-```
-nerdctl rm test-container
-```
-List images
-```
-nerdctl images
-```
-Remove an image
-```
-nerdctl rmi nginx
-```
-#### Advanced Usage
-
-Mount a volume
-```
-nerdctl run -v /host/data:/data alpine
-```
-Use ports
-```
-nerdctl run -p 8080:80 nginx
-```
-Use build (like Dockerfile)
-```
-nerdctl build -t myapp .
-```
 #### Documentation
 
 GitHub Repository:
