--- a/4.Networking.md
+++ b/4.Networking.md
@@ -26,6 +26,14 @@ kube-proxy-fhx29                        1/1     Running   0          3m      <no
 
 📌 coredns will be in Pending state until a network plugin like Calico is installed.
 
+✅ `kubectl apply`
+Purpose: Creates or updates Kubernetes resources based on a YAML/JSON file.
+Use Case: When you want to deploy or update apps, configs, services, etc.
+
+❌ `kubectl delete`
+Purpose: Deletes Kubernetes resources defined in a YAML file or by name.
+Use Case: When you want to remove resources from the cluster
+
 #### Installing Calico (Recommended CNI)
 
 To enable pod-to-pod networking, install Calico in Manager Node :
